--- a/India/Youtube/Prankster_Rahul/unethical_ads.yml
+++ b/India/Youtube/Prankster_Rahul/unethical_ads.yml
@@ -1,5 +1,6 @@
 ---
 channel_id: UCiJKrqlkEha2kj3D9vSUCIg
+icon: https://yt3.ggpht.com/ytc/AAUvwnjCeL-2dRcqMajfjuJaYLSsMA1_Z5zxVYlDehc=s88-c-k-c0x00ffffff-no-rj
 unethical_ads:
   - url: https://www.youtube.com/watch?v=QZ-RoKR6VXQ
     markers:
